--- a/templates/forms/new_venue.html
+++ b/templates/forms/new_venue.html
@@ -2,12 +2,8 @@
 {% block title %}New Venue{% endblock %}
 {% block content %}
 <div class="form-wrapper">
-   <form
-      method="post"
-      class="form "
-      id="venue-form"
-      action="/venues/create"
-   >
+   <form method="post" class="form" action="/venues/create">
+      {{form.csrf_token}}
       <h3 class="form-heading">
          List a new venue
          <a href="{{ url_for('index') }}" title="Back to homepage">
