--- a/templates/pages/shows.html
+++ b/templates/pages/shows.html
@@ -5,16 +5,16 @@
    {%for show in shows %}
    <div class="col-sm-4">
       <div class="tile tile-show">
-         <a href="/artists/{{ show.artist_id }}">
+         <a href="/artists/{{ show.artists.id }}">
             <img src="{{ show.artists.image_link }}" alt="Artist Image">
          </a>
          <h4>{{ show.start_time|datetime('full') }}</h4>
          <h5>
-            <a href="/artists/{{ show.artist_id }}">{{ show.artists.name }}</a>
+            <a href="/artists/{{ show.artists.id }}">{{ show.artists.name }}</a>
          </h5>
          <p>playing at</p>
          <h5>
-            <a href="/venues/{{ show.venue_id }}">{{ show.venues.name }}</a>
+            <a href="/venues/{{ show.venues.id }}">{{ show.venues.name }}</a>
          </h5>
       </div>
    </div>
